--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" ng-app="NarrowItDownApp">
-
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Narrow Down Your Menu Choice</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style.css">
-  
+  <title>Narrow Down Your Menu Choice</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/style.css">
+ 
 </head>
-
 <body>
-    <div class="container" ng-controller="NarrowItDownController as menu">
-        <h1>Narrow Down Your Chinese Menu Choice</h1>
-        <div class="search">
-            <input type="text" placeholder="search term" class="form-control" ng-model="menu.shortName">
-            <div class="narrow-button">
-                <button class="btn btn-primary" ng-click="menu.matchedMenuItems(menu.shortName)">Narrow It Down For Me!</button>
-            </div>
-        </div>
-        <found-items found-items="menu.found" on-remove="menu.removeMenuItem(index)" on-empty="menu.message"></found-items>
+  <div class="container" ng-controller='NarrowItDownController as searchController'>
+    <h1>Narrow Down Your Chinese Menu Choice</h1>
+    <div class="form">
+      <div class="form-group">
+        <input type="text" ng-model="searchController.searchTerm" placeholder="search term" class="form-control">
+      </div>
+      <div class="form-group narrow-button">
+        <button ng-click="searchController.getMatchedMenuItems();" class="btn btn-primary">Narrow It Down For Me!</button>
+      </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
-    <script src="app.js"></script>
-</body>
 
+    <!-- Bonus loader (see Bonus section of the assignment) -->
+    <items-loader-indicator></items-loader-indicator>
+
+    <!-- found-items should be implemented as a component -->
+    <div ng-if="searchController.found.length == 0" class="emptyMessage">Nothing found.</div>
+    <div ng-if="searchController.found.length != 0" class="tableView">
+      <found-items items="searchController.found" on-remove="searchController.removeItem(index)"></found-items>
+    </div>
+  </div>
+  <script src="js/angular.min.js"></script>
+  <script src="js/app.js"></script>
+</body>
 </html>
