--- a/index.html
+++ b/index.html
@@ -1,34 +1,26 @@
 <!doctype html>
-<html lang="en" ng-app="NarrowItDownApp">
+<html lang="en">
 <head>
   <title>Narrow Down Your Menu Choice</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/bootstrap.min.css">
   <link rel="stylesheet" href="styles/style.css">
- 
-</head>
-<body>
-  <div class="container" ng-controller='NarrowItDownController as searchController'>
-    <h1>Narrow Down Your Chinese Menu Choice</h1>
-    <div class="form">
-      <div class="form-group">
-        <input type="text" ng-model="searchController.searchTerm" placeholder="search term" class="form-control">
-      </div>
-      <div class="form-group narrow-button">
-        <button ng-click="searchController.getMatchedMenuItems();" class="btn btn-primary">Narrow It Down For Me!</button>
-      </div>
-    </div>
-
-    <!-- Bonus loader (see Bonus section of the assignment) -->
-    <items-loader-indicator></items-loader-indicator>
-
-    <!-- found-items should be implemented as a component -->
-    <div ng-if="searchController.found.length == 0" class="emptyMessage">Nothing found.</div>
-    <div ng-if="searchController.found.length != 0" class="tableView">
-      <found-items items="searchController.found" on-remove="searchController.removeItem(index)"></found-items>
-    </div>
-  </div>
   <script src="js/angular.min.js"></script>
   <script src="js/app.js"></script>
+</head>
+<body ng-app="NarrowItDownApp">
+  <div class="container" ng-controller="NarrowItDownController as narrow">
+    <h1>Narrow Down Your Chinese Menu Choice</h1>
+    <div class="form-group">
+      <input type="text" placeholder="search term" class="form-control" ng-model="narrow.searchTerm">
+    </div>
+    <div class="form-group narrow-button">
+      <button class="btn btn-primary" ng-click="narrow.searchMenu(narrow.searchTerm);">Narrow It Down For Me!</button>
+    </div>
+    <h3 ng-if="narrow.found_items.length==0">Nothing Found!</h3>
+    <!-- found-items should be implemented as a component -->
+    <found-items items="narrow.found_items" on-remove="narrow.removeItem(index)"></found-items>
+  </div>
+
 </body>
 </html>
