--- a/items.html
+++ b/items.html
@@ -1,16 +1,6 @@
-<table class="table table-striped table-hover dataTable responsive display" width="100%">
-    <thead>
-    <th>Short Name</th>
-    <th>Name</th>
-    <th>Description</th>
-    <th class="nosort"></th>
-    </thead>
-    <tbody>
-    <tr ng-repeat= "item in items">
-    <td>{{item.short_name}}</td>
-    <td>{{item.name}}</td>
-    <td>{{item.description}}</td>
-    <td><button ng-click="onRemove({index: $index});">Don't want this one!</button></td>
-    </tr>
-    </tbody>
-    </table>
+<ol>
+    <li ng-repeat="item in list.items">
+      {{item.short_name}}, {{ item.name }}, {{ item.description }}
+      <button ng-click="list.onRemove({index: $index});">Remove Item</button>
+    </li>
+  </ol>
